@@ -1,3 +1,8 @@
+2007-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* doc/Makefile.am: Add install-man target. Also install/uninstall
+	doxygen-generated man pages.
+
 2007-03-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* configure.ac (LT_CURRENT, LT_REVISION, LT_AGE),
